--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-a {
-  color: #000;
-}
-
-.active {
-  color: #fff;
-  background-color: #000;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
